objects/ASI_KOR_Branches__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ASI_KOR_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Manager__c</fullName>
        <label>Branch Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Direct_Report_to_NSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Report to NSD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region_Code__c</fullName>
        <label>Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI KOR Branches</label>
    <listViews>
        <fullName>ASI_KORE_NEW_View</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Branch_Code__c</columns>
        <columns>ASI_KOR_Branch_Manager__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_Direct_Report_to_NSD__c</columns>
        <filterScope>Everything</filterScope>
        <label>NEW View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>